More and more refactoring